<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context="com.example.anganwadi.Admin.AddStudent"
    >

    <TextView
        android:id="@+id/headingAddStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/add_student"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CNametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/full_name"
        app:hintTextColor="@color/dark"
        android:textColorHint="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/kid">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Agetv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/age_hint"
        app:hintTextColor="@color/dark"
        android:textColorHint="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAge"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Fathernametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/father_full_name"
        android:textColorHint="@color/dark"
        app:hintTextColor="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/father">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFathername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Mothernametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/mother_full_name"
        android:textColorHint="@color/dark"
        app:hintTextColor="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/mom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMothername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CPhonetv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/phone"
        android:textColorHint="@color/dark"
        app:hintTextColor="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Citytv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/enter_city"
        android:textColorHint="@color/dark"
        app:hintTextColor="@color/dark"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/radiotv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/select_gender"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/male"
            android:textColor="@color/dark"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/dark"
            android:textStyle="bold" />


    </RadioGroup>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>