<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/login1"
    tools:context="com.example.anganwadi.User.LoginActivity">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/login_heading"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:hintTextColor="@color/dark"
        android:textColorHint="@color/dark"
        android:layout_below="@+id/txtlogin"
        style="@style/LoginTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/dark"
        android:hint="@string/password"
        app:hintTextColor="@color/dark"
        app:passwordToggleEnabled="true"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/regTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dont_have_account"
        android:layout_marginLeft="10dp"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:layout_below="@+id/btnLogin"
        android:textStyle="bold"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/forgotTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/dark"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotTv"
        android:layout_centerInParent="true"
        android.layout_marginTop="30dp"
        android:backgroundTint="@color/dark"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
